--- a/app.json
+++ b/app.json
@@ -1,5 +1,15 @@
 {
   "expo": {
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow camera to access your camera",
+          "microphonePermission": "Allow camera to access your microphone",
+          "recordAudioAndroid": true
+        }
+      ]
+    ],
     "name": "chamada",
     "slug": "chamada",
     "version": "1.0.0",
@@ -26,5 +36,6 @@
     "web": {
       "favicon": "./assets/favicon.png"
     }
+    
   }
 }
