--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "expo-camera": "~14.1.1",
     "expo-constants": "^15.4.5",
     "expo-local-authentication": "~13.8.0",
-    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -23,7 +22,7 @@
     "react-native-camera-hooks": "^0.5.3",
     "react-native-maps": "^1.13.0",
     "react-native-web": "~0.19.6",
-    "react-navigation": "^5.0.0"
+    "expo-location": "~16.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
